# reading-notes-desktop

./: package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/permissions/: main.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/entitiy/: book.rs  memo.rs  reading_note.rs
src-tauri/src/handler/: book.rs  mod.rs  reading_note.rs
src-tauri/src/repos/: book.rs  memo.rs  mod.rs  reading_note.rs
src-tauri/src/repos_impl/: book.rs  memo.rs  mod.rs  reading_note.rs
src/components/BookCard/: BookCard.tsx
src/components/BookDetailModal/: BookDetailModal.tsx
src/components/ConfirmDialog/: ConfirmDialog.tsx
src/components/CreateBookModal/: CreateBookModal.tsx
src/components/ReadingNoteList/: ReadingNoteList.tsx
src/components/ShowMore/: ShowMore.tsx
src/components/UserDropDown/: UserDropDown.tsx
src/types/: book.d.ts  color.d.ts  memo.d.ts  user.d.ts
