[package]
name = "reading-notes-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reading_notes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.86"
reqwest = "0.12.7"
tokio = { version = "1.39.3", features= ["full"] }
thiserror = "1.0.63"
dotenvy = "0.15.7"
uuid = { version = "1.10.0", features = ["v4", "v7"] }
tower-http = { version = "0.6.1", features = ["cors"] }
async-trait = "0.1.83"

